maps now visible! (background color issue)

--- a/frontend/src/components/HomePage/Home.css
+++ b/frontend/src/components/HomePage/Home.css
@@ -1,13 +1,6 @@
 /* ------------------- Home Maps Container ------------------- */
 .home-container {
-    margin: 30px 70px;
-}
+    padding: 30px 70px;
+    background-color: #faf8eb;
 
-.map {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 60px 60px 0 60px;
-    color: #6e7e3c;
 }
