--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,6 +10,6 @@ body {
 }
 
 * {
-    background-color: #faf8eb;
+    /* background-color: #faf8eb; */
     font-family: Calibre, Helvetica, Arial, sans-serif;
 }
